kubernetes/apps/monitoring/grafana/grafana/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
spec:
  parentRefs:
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: http-wildcard
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: http-wildcard-local
  hostnames:
    - grafana.${PUBLIC_DOMAIN}
    - grafana.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https
spec:
  parentRefs:
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: https-wildcard
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: https-wildcard-local
  hostnames:
    - grafana.${PUBLIC_DOMAIN}
    - grafana.${LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
